# remembrallmcp

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  analyze.py  tasks.toml
benchmarks/reports/: benchmark-2026-04-02.md
crates/engram-core/src/: graph.rs
crates/engram-core/src/graph/: layers.rs  store.rs  types.rs
crates/engram-core/src/parser/: java.rs  python.rs  ruby.rs  rust.rs
crates/engram-integration-tests/: Cargo.toml
crates/engram-integration-tests/src/: main.rs
crates/engram-server/src/: lib.rs  watcher.rs
crates/remembrall-core/: Cargo.toml  README.md
crates/remembrall-core/src/: config.rs  embed.rs  error.rs  indexer.rs  ingest.rs
crates/remembrall-core/src/graph/: store.rs  types.rs
crates/remembrall-core/src/memory/: store.rs
crates/remembrall-core/src/parser/: go.rs  kotlin.rs  mod.rs  python.rs  typescript.rs  walker.rs
crates/remembrall-integration-tests/: Cargo.toml
crates/remembrall-integration-tests/src/: main.rs
crates/remembrall-python/: Cargo.toml
crates/remembrall-python/src/: lib.rs
crates/remembrall-recall-test/: Cargo.toml
crates/remembrall-recall-test/src/: main.rs  report.rs  runner.rs  seed.rs
crates/remembrall-server/: Cargo.toml  README.md
crates/remembrall-server/src/: config.rs  lib.rs  main.rs  watcher.rs
crates/remembrall-server/src/tools/: graph.rs  ingest.rs  memory.rs  mod.rs
crates/remembrall-test-harness/: Cargo.toml
crates/remembrall-test-harness/src/: comparator.rs  main.rs
docs/: parser-architecture.md  test-plan.md
test-fixtures/: fetch.sh
tests/recall/: ground_truth.toml  seed_memories.toml
